--- a/Rodgort/wwwroot/502.html
+++ b/Rodgort/wwwroot/502.html
@@ -1,21 +1,26 @@
 <html>
 <head>
-	<style>
-		.notice {
-			margin: auto; 
-			width: 500px; 
-			padding-top: 5px;
-			text-align: center;
-		}
-	</style>
+    <title>Rodgort</title>
+    <meta http-equiv="refresh" content="5;url=/" />
+    <style type="text/css">
+        .notice {
+            margin: auto;
+            width: 500px;
+            padding-top: 5px;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-	<p class="notice">
-		Rodgort is currently rebooting and will be available in a few moments.
-	</p>
-	<p class="notice">
-		 For prolonged outages, please ping <a href="https://chat.stackoverflow.com/users/563532">Rob</a> in <a href="https://chat.stackoverflow.com/rooms/165597/trogdor">Trogdor</a>.
-	</p>
+<p class="notice">
+    Rodgort is currently rebooting and will be available in a few moments.
+</p>
+<p class="notice">
+    This page will automatically refresh.
+</p>
+<p class="notice">
+    For prolonged outages, please ping <a href="https://chat.stackoverflow.com/users/563532">Rob</a> in <a href="https://chat.stackoverflow.com/rooms/165597/trogdor">Trogdor</a>.
+</p>
 </body>
 </html>
